updates and added reset password functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,20 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 
+#mail smtp server
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= ${MAIL_USER}
+spring.mail.password= ${MAIL_PASS}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+# Facultatif mais parfois indispensable :
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+#application intern variables
 app.jwtSecret= ${HASH_KEY}
+app.frontend.reset-password-url=http://localhost:8080/reset-password.html
 
 server.port= 8080
 
