--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name= budgetapi
 
-spring.datasource.url= jdbc:mysql://localhost:3306/budgetdata?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url= ${DB_URL}
 spring.datasource.username= ${DB_USER}
 spring.datasource.password= ${DB_PASS}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 #mail smtp server
 spring.mail.host=smtp.gmail.com
