--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 #application intern variables
 app.jwtSecret= ${HASH_KEY}
-app.frontend.reset-password-url=http://localhost:8080/reset-password.html
+app.frontend.reset-password-url=https://budgetapi-nfc2.onrender.com/reset-password.html
 
 server.port= 8080
 
