--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.datasource.url= ${DB_URL}
 spring.datasource.username= ${DB_USER}
 spring.datasource.password= ${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.open-in-view= false
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= false
 
