--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name= budgetapi
 spring.datasource.url= ${DB_URL}
 spring.datasource.username= ${DB_USER}
 spring.datasource.password= ${DB_PASS}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view= false
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= false
